-added required functions to support the new ruby module
-bug: when deleting users their username was free()'d before their
	irc connection was closed -> garbled output in the log
-bug: version.tcl was not setting the binds for the right users, expiring
	flood blocks didn't work because the variable $user didn't exist
-users' idents can be overriden using User->SetIdent("ident")
	(tcl: setbncuser USER ident new-ident)
	
Revision 300:
-bug: fixed "raw" command in iface.tcl (start-index should be 0, not 1)

Revision 304:
-modularized sbnc so it can be updated without losing any active irc connections
-bug: fixed various compilation errors on *bsd boxes

Revision 307:
-client connections are kept alive during reloads

Revision 308:
-bug: fixed a minor memory leak in sbncloader
-bug: fixed compilation errors on linux

Revision 309:
-changed directory name in the .tar.gz package
-added commands: "make install" and "make update"
-simplified build procedure
-changed name of example configuration files
-updated readme file to reflect recent changes

Revision 317:
-finally fixed freeze while unloading the tcl module

Revision 323:
-updated /sbnc kill command (was killing the wrong user, i.e. the one who used the command)
-updated README.ssl

Revision 324:
-added uptime module

Revision 351:
-several minor bugfixes
-added plugin support for iface
-added ssl support for tcl sockets
-added ssl support for iface
-added support for overriding built-in iface commands
-improved performance
-made /sbnc help editable using modules
-added a new special file: "sbnc.motd"

Revision 358:
-version: 1.1
-added: awaymessage.tcl
-added: contact.tcl
-added: lock.tcl
-added: qauth.tcl
-added: vhost.tcl
-added: virtual.tcl
-added several tcl commands which are required by the new web interface

Revision 370:
-fixed "ping timeout" bug when reloading sbnc, possibly fixed a bug in "make update"
-updated README
-added java-style comments for some files