@@ -1,3 +1,0 @@
-LIBRARY bnchello
-EXPORTS
-	bncGetObject
