@@ -1,3 +1,0 @@
-LIBRARY tickle
-EXPORTS
-	bncGetObject
